@@ -2,6 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>dev.thihup.joel</groupId>
+        <artifactId>parent</artifactId>
+        <version>1.0.0-M1</version>
+    </parent>
+
     <groupId>dev.thihup.joel</groupId>
     <artifactId>tck</artifactId>
     <version>1.0.0-M1</version>
@@ -26,7 +32,7 @@
                         <configuration>
                             <target>
                                 <!-- download, unzip and rename TCK -->
-                                <get src="https://download.eclipse.org/ee4j/jakartaee-tck/jakartaee9/promoted/expression-language-tck-4.0.1.zip"
+                                <get src="https://download.eclipse.org/jakartaee/expression-language/5.0/jakarta-expression-language-tck-5.0.0.zip"
                                      dest="${project.build.directory}/tck.zip" skipexisting="true"/>
                                 <unzip src="${project.build.directory}/tck.zip"
                                        dest="${project.build.directory}"/>
@@ -47,15 +53,6 @@
                                 <!-- keep copy of original ts.jte -->
                                 <copy file="${tck.home}/bin/ts.jte"
                                       tofile="${tck.home}/bin/ts.jte.orig"/>
-
-                                <!-- keep copy of original ts.jte.jdk11 -->
-                                <copy file="${tck.home}/bin/ts.jte.jdk11"
-                                      tofile="${tck.home}/bin/ts.jte.jdk11.orig"/>
-
-                                <!-- replace the ts.jte with ts.jte.jdk11 -->
-                                <delete file="${tck.home}/bin/ts.jte" />
-                                <copy file="${tck.home}/bin/ts.jte.jdk11"
-                                      tofile="${tck.home}/bin/ts.jte"/>
 
                                 <!-- setup ts.jte -->
                                 <replaceregexp file="${tck.home}/bin/ts.jte"
@@ -86,6 +83,7 @@
                                     <arg value="-Dwork.dir=${work.home}/work"/>
                                     <arg value="-Dreport.dir=${work.home}/report"/>
                                     <arg value="runclient"/>
+                                    <env key="JDK_JAVA_OPTIONS" value="-Djava.security.manager=allow" />
                                 </exec>
                             </target>
                         </configuration>
